# Radiko_Recorder

./: build.bat  build.sh  pyproject.toml  test.ipynb
devscripts/: update-version.py
radiko_recorder/: __init__.py  version.py
